#	$Id$	

Changelog for HylaFAX 4.2.1

* fix a bug in notify when the job is killed (15 Sep 2004)
* initialize supplementary groups when switching uid (13 Sep 2004)
* fix faxsend to retrain after receiving RTP (9 Sep 2004)
* fix tiffcheck unit comparison error (1 Sep 2004)
* fix misconfirmation of some ECM faxes (30 Aug 2004)
* add fax batching support to faxq (30 Aug, 9 Sep 2004)
* ignore garbage after sending TCF data (26 Aug 2004)
* fix truncation of filenames in faxcron (26 Aug 2004)
* add configure support for libtiff 3.7 (25 Aug 2004)
* extend short send-HDLC timeouts (18 Aug 2004)
* add a pause after receiving MCF on non-ECM send sessions (18 Aug 2004)
* fix broken fax polling (17 Aug 2004)
* add several timing enhancements for stressed 
  servers (16 Aug, 10, 15 Sep 2004)

Changelog for HylaFAX 4.2.0 - Aug 16, 2004

* resurrect 4.1.x notify as notify-4.1.sh for compatibility (16 Aug 2004)
* significant portability cleanups to new notify script (14 Aug 2004)
* fix font rendering at hyperfine resolution (13 Aug 2004)
* stop tiff2fax from using problematic symbolic links (11 Aug 2004)
* fix truncation of last byte on sent MMR data (09 Aug 2004)
* fix end of page signals and padding (23 Jul 2004)
* prevent internationalization from interfering with build (22 Jul 2004)
* restrict faxq to prepare only single-strip TIFF data (29 Jun 2004)
* only use normal and fine resolutions when not using XVRes (28 Jun 2004)
* limit fax retrains to allowed moments (28 Jun 2004)
* change DynamicLocalID to DynamicConfig (22 Jun 2004)
* fix V.17 fallbacks after the CTC/CTR exchange (21 Jun 2004)
* tune setting of -rpath when linking on linux (21 Jun 2004)
* add admin option and dialstring alteration to faxalter (20 Jun 2004)
* add -end option for xferfaxstats and recvstats (17 Jun 2004)
* add DynamicLocalID config option (17 Jun 2004)
* prevent CID values from acquiring data when unset (1 Jun 2004)
* add ModemReadyCmds config option (1 Jun 2004)